--- a/sass/partials/_checkout-shipping-methods.scss
+++ b/sass/partials/_checkout-shipping-methods.scss
@@ -25,6 +25,12 @@
 
 
 
+.woocommerce .fc-shipping-method__packages {
+	text-align: #{ $alignment-left };
+}
+
+
+
 .woocommerce .fc-shipping-method__packages ul#shipping_method {
 	float: none;
 	display: block;
